# aegis-lua-scripts

./: DependencyControl.json  README.md  ghe.GroupCopy.lua  ghe.Whispers.lua
macros/: ghe.Whispers.lua
whispers/: LICENSE  README.md  pyproject.toml
whispers/ass_whispers/: __main__.py
