[project]
name = "ass-whispers"
version = "0.1.5"
description = "Transcribe audio to text for Aegisub macro Whispers"
readme = "README.md"
authors = [
  { name = "Ghegghe", email = "nicopante98@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["subtitles", "transcription", "aegisub", "whisper", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "faster-whisper>=1.1.1,<2.0.0"
]

[project.scripts]
ass-whispers = "ass_whispers.__main__:main"

[project.urls]
"Repository" = "https://github.com/Ghegghe/aegis-lua-scripts"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
